# s3k-poc

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  boot.mk  config.h  config.mk  default.ld  default.lds  default.mk  demonstrator.tex  meson.build  meson.options  monitor.lds  s3k.h
app0/: Makefile  main.c
app1/: Makefile  main.c  start.S
app1/src/: main.c
boot/: Makefile  capman.c  capman.h  main.c  payload.S  payload.h
bsp/: virt.h
common/: base.h  common.S  printf.c  printf.h  ring_buffer.h  s3k-syscall.c  s3k-utils.c  s3k.c  s3k.h  start.S  uart.h
common/inc/: s3k.h  util.h
crypto/: aes128.c  aes128.h  aes128_tables.h  main.c
docs/section/: demo1.tex
inc/: altio.h  base.h  memory.h  ring_buffer.h  s3k.h
init/: Makefile  init.lds
init/src/: heap.S  main.c  payload.S
monitor/: Makefile  default.lds  main.c  payload.S  payload.h  start.S
monitor/src/: main.c  payload.S  start.S
root/: Makefile  main.c  root.lds
root/src/: heap.S  main.c  newlib.c  payload.S  start.S
scripts/: client.py  gdb_gen.sh  qemu.sh  qemu_gen.sh  sched_gen.py
section/: demo1.tex  demo2.tex  goal.tex
subprojects/: .gitignore  libs3k.wrap  libserio.wrap  s3k.wrap
subprojects/boot/: meson.build  meson.options
subprojects/boot/platform/qemu_virt/: linker.ld
subprojects/boot/src/: head.S  main.c
subprojects/comm/: meson.build  meson.options
subprojects/comm/platform/qemu_virt/: linker.ld
subprojects/comm/src/: main.c
subprojects/fcs/: meson.build
subprojects/fcs/platform/qemu_virt/: linker.ld  meson.build
subprojects/fcs/src/: main.c
subprojects/fcs/subprojects/: libs3k.wrap
subprojects/mon/: meson.build
subprojects/mon/platform/qemu_virt/: linker.ld
subprojects/mon/subprojects/: libs3k.wrap
subprojects/nav/: meson.build
subprojects/nav/platform/qemu_virt/: linker.ld
subprojects/nav/subprojects/: libserio.wrap
uart/: Makefile  default.lds  main.c  ppp.c  ppp.h
uart/src/: main.c  start.S
uart_in/: Makefile  main.c
uart_in/src/: main.c  start.S
uart_out/: Makefile  main.c
uart_out/src/: main.c  start.S
uartppp/: main.c  ppp.c
