option('nproc', type : 'integer', value : 4)
option('nhart', type : 'integer', value : 1)
option('nslot', type : 'integer', value : 100)
option('ntick', type : 'integer', value : 10000)
option('npmp',  type : 'integer', value : 8)
option('nchan', type : 'integer', value : 8)
option('ncap',  type : 'integer', value : 32)
option('platform', type : 'combo', choices : ['qemu_virt'], value : 'qemu_virt')
